# SnaFlare

./: Cargo.toml  README.md  todo.txt
.github/workflows/: release.yml
src/: main.rs  snaffler_record.rs  timer.rs
