[package]
name = "SnaFlare"
version = "0.1.4"
authors = ["fbin"]
description = "Group snaffler output by similar findings."
edition = "2021"

[dependencies]
regex = "1.10.4"
serde = "1.0"
serde_derive = "1.0"
strsim = "0.11.1"
rand = "0.8.5"
rayon = "1.10.0"
encoding_rs = "0.8.34"

[dependencies.clap]
version = "4.5.4"
features = ["cargo"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
